--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -8,11 +8,9 @@
 		"@babel/plugin-proposal-async-generator-functions",
 		"@babel/plugin-syntax-async-generators",
 		["@babel/plugin-transform-runtime", {
-			"corejs": true,
+			"corejs": 2,
 			"helpers": true,
-			"polyfill": true,
-			"regenerator": true,
-			"moduleName": "@babel/runtime-corejs2"
+			"regenerator": true
 		}],
 		"@babel/plugin-proposal-object-rest-spread",
 		["@babel/plugin-proposal-decorators", { "legacy": true }],
