--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,9 @@
     "flow": "./node_modules/.bin/flow",
     "lint": "./node_modules/.bin/eslint",
     "lint-all": "./node_modules/.bin/eslint ./src/",
-    "clean": "./node_modules/.bin/rimraf './public/dist/beaconing/pages/*' './public/dist/beaconing/*.js' './public/dist/beaconing/*.css'"
+    "clean": "./node_modules/.bin/rimraf './public/dist/beaconing/pages/*' './public/dist/beaconing/*.js' './public/dist/beaconing/*.css' './node_modules/.cache/*'"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
     "@babel/core": "7.1.2",
     "@babel/plugin-proposal-async-generator-functions": "7.1.0",
     "@babel/plugin-proposal-class-properties": "7.1.0",
@@ -51,30 +50,32 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "7.0.0",
     "autoprefixer": "9.1.5",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "cache-loader": "1.2.2",
     "color-convert": "1.9.3",
     "css-loader": "1.0.0",
+    "cssnano": "4.1.4",
     "eslint": "5.6.1",
     "eslint-config-airbnb-base": "13.1.0",
-    "cssnano": "4.1.4",
     "eslint-plugin-babel": "5.2.1",
     "eslint-plugin-flowtype": "2.50.3",
-    "hard-source-webpack-plugin": "0.12.0",
     "eslint-plugin-import": "2.14.0",
+    "file-loader": "2.0.0",
     "flow-bin": "0.82.0",
+    "hard-source-webpack-plugin": "0.12.0",
     "json5-loader": "1.0.1",
     "mini-css-extract-plugin": "0.4.4",
     "minimatch": "3.0.4",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
     "node-sass": "4.9.3",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "parallel-webpack": "2.3.0",
     "postcss-loader": "3.0.0",
     "rimraf": "2.6.2",
-    "webpack": "4.20.2",
-    "thread-loader": "1.2.0",
     "sass-loader": "7.1.0",
+    "thread-loader": "1.2.0",
     "uglifyjs-webpack-plugin": "2.0.1",
+    "webpack": "4.20.2",
     "webpack-cli": "3.1.2",
     "webpack-dashboard": "2.0.0",
     "webpack-dev-server": "3.1.9"
