--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ frontend/public/dist/beaconing/*.css
 frontend/public/dist/beaconing/*.js
 frontend/public/dist/beaconing/*.map
 frontend/public/dist/beaconing/pages
+frontend/public/dist/beaconing/docs
 frontend/public/dist/glp_files/
 
 # vendor
